fix font size and footer alignment

--- a/src/styles/Journal.scss
+++ b/src/styles/Journal.scss
@@ -176,8 +176,11 @@ form {
   }
 
   .entries-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
     flex-direction: column;
-    padding: 12px;
+    padding: 20px;
     overflow-y: auto;
     width: 80%;
     max-height: 50vh;
